src/objects/Product_Line_Cross_Ref__c/Product_Line_Cross_Ref__c.object-meta.xml
<CustomObject>
    <label>Product Type Cross Ref</label>
    <nameField>
        <label>Product Line Cross Ref Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Type Cross Ref</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>