src/objects/Product_Line_Cross_Ref__c/fields/Product_Leader__c.field-meta.xml
<CustomField>
    <fullName>Product_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Leader</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Product_Line_Cross_Ref</relationshipName>
    <type>Lookup</type>
</CustomField>