src/objects/Product_Line_Cross_Ref__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Type</label>
    <referenceTo>Product_Line__c</referenceTo>
    <relationshipLabel>Product Type Cross Ref</relationshipLabel>
    <relationshipName>Product_Line_Cross_Ref</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>