src/objects/Product_Line_Cross_Ref__c/fields/Product_Line_Cross_Ref_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Cross_Ref_Type__c</fullName>
    <label>Product Line Cross Ref Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ATR</fullName>
            </value>
            <value>
                <fullName>BGA</fullName>
            </value>
            <value>
                <fullName>D&amp;S</fullName>
            </value>
            <value>
                <fullName>NetChange</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>ProductLine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>