src/objects/Product_Line_Cross_Ref__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Line__c</columns>
    <columns>Product_Line_Cross_Ref_Type__c</columns>
    <columns>Product_Leader__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>