src/objects/Product_Line_Cross_Ref__c/listViews/All_This_Week.listView-meta.xml
<ListView>
    <fullName>All_This_Week</fullName>
    <columns>Product_Line__c</columns>
    <columns>NAME</columns>
    <columns>Product_Line_Cross_Ref_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>All This Week</label>
</ListView>