src/objects/Product_Line_Cross_Ref__c/listViews/Inactive_Product_Line_XRef.listView-meta.xml
<ListView>
    <fullName>Inactive_Product_Line_XRef</fullName>
    <columns>NAME</columns>
    <columns>Product_Line__c</columns>
    <columns>Product_Line_Cross_Ref_Type__c</columns>
    <columns>Product_Leader__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>INACTIVE</value>
    </filters>
    <label>Inactive Product Line XRef</label>
</ListView>